--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,22 @@
       <version>2.2.0</version>
       <scope>test</scope>
     </dependency>
+    <!-- Log4j -->
+		<!-- dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.24</version>
+		</dependency -->
+		<!-- Log4j2 -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
