--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
   	<dependency>
   		<!-- Needed for the AspectJ support -->
@@ -60,6 +61,7 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-test</artifactId>
   		<version>${spring.version}</version>
+  		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<!-- Needed for Tomcat 8.0 startup -->
